--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -27,7 +27,7 @@
     &_three{
         background-color: $lila;
         border-color: $lila;
-        color: $celeste;
+        color: $rosa;
         width: 450px;
         height: 300px;
     }
@@ -48,7 +48,7 @@
     &_six{
         background-color: $celeste;
         border-color: $celeste;
-        color: $marron;
+        color: $lila;
         width: 450px;
         height: 300px;
     }
