--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -4,6 +4,7 @@
 
 .nav_link{
     font-family: $fuente-principal;
+    font-weight: bold;
     &:hover{
         color: black;
     }
@@ -25,13 +26,13 @@
 
 .separator::after{
         content: "   |";
-        width: 5px;
-        height: 20px;
+        width: 0.313rem;
+        height: 1.25rem;
 } 
 
 
 .logo{
-    width: 40px;
+    width: 2.5rem;
 }
 
 .page_active{
