--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ a {
 h1 {
   font-family: "Marcellus", serif;
   font-weight: lighter;
-  font-size: 50px; }
+  font-size: 3.125rem; }
 
 p {
   font-family: "Marcellus", serif; }
@@ -28,7 +28,8 @@ p {
   background-color: #F1DFB6; }
 
 .nav_link {
-  font-family: "Marcellus", serif; }
+  font-family: "Marcellus", serif;
+  font-weight: bold; }
   .nav_link:hover {
     color: black; }
 
@@ -46,11 +47,11 @@ p {
 } */
 .separator::after {
   content: "   |";
-  width: 5px;
-  height: 20px; }
+  width: 0.313rem;
+  height: 1.25rem; }
 
 .logo {
-  width: 40px; }
+  width: 2.5rem; }
 
 .page_active {
   text-decoration: underline; }
@@ -58,61 +59,80 @@ p {
 .card_font {
   font-family: "Berkshire Swash", cursive;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   /* margin-right: 20px; */ }
 
 .card_img {
-  margin-top: 75px;
-  padding: 20px; }
+  margin-top: 4.688rem;
+  margin-bottom: -3.75rem;
+  padding: 1.25rem; }
+
+.card_imgdos {
+  width: 6.875rem;
+  align-self: center;
+  margin-top: 0.625rem;
+  margin-bottom: -3.75rem; }
+
+.card_imgtres {
+  width: 11.25rem;
+  align-self: center;
+  margin-top: 2.188rem;
+  margin-bottom: -3.125rem; }
+
+.card_imgcuatro {
+  width: 15.625rem;
+  align-self: center;
+  margin-top: 2.5rem;
+  margin-bottom: -2.5rem; }
 
 .card_one {
   background-color: #D6E8F7;
   border-color: #D6E8F7;
   color: #CB962E;
-  height: 453px;
-  margin-top: 10px; }
+  height: 28.313rem;
+  margin-top: 0.625rem; }
 
 .card_two {
   background-color: #F1DFB6;
   border-color: #F1DFB6;
   color: #EF601E;
-  width: 450px;
-  height: 300px; }
+  width: 28.125rem;
+  height: 18.75rem; }
 
 .card_three {
   background-color: #CAAACD;
   border-color: #CAAACD;
   color: #F1DFB6;
-  width: 450px;
-  height: 300px; }
+  width: 28.125rem;
+  height: 18.75rem; }
 
 .card_four {
   background-color: #EF601E;
   border-color: #EF601E;
   color: #D6E8F7;
-  width: 450px;
-  height: 300px; }
+  width: 28.125rem;
+  height: 18.75rem; }
 
 .card_five {
   background-color: #EF601E;
   border-color: #EF601E;
   color: #D6E8F7;
-  width: 450px;
-  height: 300px; }
+  width: 28.125rem;
+  height: 18.75rem; }
 
 .card_six {
   background-color: #D6E8F7;
   border-color: #D6E8F7;
   color: #CAAACD;
-  width: 450px;
-  height: 300px; }
+  width: 28.125rem;
+  height: 18.75rem; }
 
 .card_seven {
   background-color: #F1DFB6;
   border-color: #F1DFB6;
   color: #EF601E;
-  width: 450px;
-  height: 300px; }
+  width: 28.125rem;
+  height: 18.75rem; }
 
 .grid {
   max-width: 100vw;
@@ -166,26 +186,35 @@ p {
   grid-row: 4/5;
   background-position: center; }
 
+.nav_reg {
+  color: #EF601E;
+  font-size: 1.25rem; }
+
 .card_reg {
   padding-left: 4.375rem;
   padding-top: 3.75rem;
-  padding-bottom: 3.125rem; }
+  padding-bottom: 3.125rem;
+  justify-content: center; }
 
 .card-reg {
-  width: 66.875rem;
-  border-radius: 25px;
+  width: 85rem;
+  border-radius: 1.563rem;
   background-color: #FDF3DD;
   border-color: #F1DFB6;
-  border-width: 10px; }
+  border-width: 0.625rem; }
 
 .card-body {
-  margin: 50px;
+  margin: 3.125rem;
   color: #EF601E; }
 
 .card-title {
   font-family: "Berkshire Swash", cursive; }
 
+.reg-img {
+  margin: 1.75rem; }
+
 .btn-primary {
+  margin-top: 10.5rem;
   background-color: #F1DFB6;
   border-color: #F1DFB6;
   color: #EF601E;
