--- a/scss/_registros.scss
+++ b/scss/_registros.scss
@@ -1,19 +1,25 @@
+.nav_reg{
+    color: $rojo;
+    font-size: 1.25rem;
+}
+
 .card_reg{
     padding-left: 4.375rem;
     padding-top: 3.75rem;
     padding-bottom: 3.125rem;
+    justify-content:  center;
 }
 
 .card-reg{
-    width: 66.875rem;
-    border-radius: 25px;
+    width: 85rem;
+    border-radius: 1.563rem;
     background-color: $color-fondo;
     border-color: $rosa;
-    border-width: 10px;
+    border-width: 0.625rem;
 }
 
 .card-body{
-    margin: 50px;
+    margin: 3.125rem;
     color: $rojo;
 }
 
@@ -21,7 +27,12 @@
     font-family: $fuente-secundaria;
 }
 
+.reg-img{
+    margin: 1.75rem;
+}
+
 .btn-primary{
+    margin-top: 10.5rem;
     background-color: $rosa;
     border-color: $rosa;
     color: $rojo;
