--- a/scss/_tags.scss
+++ b/scss/_tags.scss
@@ -12,15 +12,13 @@ main{
 }
 
 a{
-    text-decoration: none;
-    
-    
+    text-decoration: none;    
 }
 
 h1{
     font-family: $fuente-principal;
     font-weight: lighter;
-    font-size: 50px;
+    font-size: 3.125rem;
 }
 
 p{
