--- a/scss/_registros.scss
+++ b/scss/_registros.scss
@@ -11,7 +11,7 @@
 }
 
 .card-reg{
-    width: 85rem;
+    width: 66.875rem;
     border-radius: 1.563rem;
     background-color: $color-fondo;
     border-color: $rosa;
@@ -32,7 +32,7 @@
 }
 
 .btn-primary{
-    margin-top: 10.5rem;
+    //margin-top: 10.5rem;
     background-color: $rosa;
     border-color: $rosa;
     color: $rojo;
