--- a/scss/_registros.scss
+++ b/scss/_registros.scss
@@ -1,6 +1,5 @@
 .nav_reg{
     color: $rojo;
-    font-size: 1.25rem;
 }
 
 .card_reg{
@@ -31,7 +30,7 @@
     margin: 1.75rem;
 }
 
-.btn-primary{
+.boton{
     //margin-top: 10.5rem;
     background-color: $rosa;
     border-color: $rosa;
