--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,7 +6,9 @@ $fuente-secundaria: 'Berkshire Swash', cursive;
 $color-fondo: #FDF3DD;
 $color-texto: #373D3B;
 $celeste: #D6E8F7;
+$azul: #91A1AF;
 $lila: #CAAACD;
+$violeta: #A46FA8;
 $marron: #CB962E;
 $rojo: #EF601E;
 $rosa: #F1DFB6;
