--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,4 +3,8 @@
 @import "navbar";
 @import "cards";
 @import "gridscard";
+@import "cardspages";
 @import "registros";
+@import "tarot";
+@import "mnsjytall";
+@import "contacto";
