--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,12 @@ p {
 .nav-fondo {
   background-color: #F1DFB6; }
 
-.nav_link {
+.nav-link {
+  color: #EF601E;
+  font-size: 16px;
   font-family: "Marcellus", serif;
   font-weight: bold; }
-  .nav_link:hover {
+  .nav-link:hover {
     color: black; }
 
 /* .separator::after{
@@ -134,6 +136,10 @@ p {
   width: 28.125rem;
   height: 18.75rem; }
 
+.card-hover:hover {
+  transform: scale(0.95, 0.95);
+  transition: all 0.3s ease-in; }
+
 .grid {
   max-width: 100vw;
   display: grid;
@@ -186,9 +192,42 @@ p {
   grid-row: 4/5;
   background-position: center; }
 
+.card-main {
+  display: flex;
+  justify-content: center;
+  margin: 0px 50px;
+  border: #F1DFB6 solid 10px;
+  border-radius: 1.563rem; }
+
+.max-container {
+  padding: 30px 0px; }
+
+.card-body {
+  margin: 3.125rem;
+  color: #EF601E; }
+
+.card-title {
+  font-family: "Berkshire Swash", cursive; }
+
+/* .boton{
+    //margin-top: 10.5rem;
+    background-color: $rosa;
+    border-color: $rosa;
+    color: $rojo;
+    width: 39.063rem;
+    &:hover{
+        background-color: $rojo;
+        color: $color-fondo;
+        border-color: $rojo;
+    }
+} */
+.img-fluid {
+  width: 400px;
+  height: 400px;
+  margin: 1.75rem; }
+
 .nav_reg {
-  color: #EF601E;
-  font-size: 1.25rem; }
+  color: #EF601E; }
 
 .card_reg {
   padding-left: 4.375rem;
@@ -213,12 +252,85 @@ p {
 .reg-img {
   margin: 1.75rem; }
 
-.btn-primary {
+.boton {
   background-color: #F1DFB6;
   border-color: #F1DFB6;
   color: #EF601E;
   width: 39.063rem; }
-  .btn-primary:hover {
+  .boton:hover {
     background-color: #EF601E;
     color: #FDF3DD;
     border-color: #EF601E; }
+
+.nav-tarot {
+  color: #A46FA8; }
+
+.card-main {
+  display: flex;
+  justify-content: center;
+  margin: 0px 50px;
+  border: #F1DFB6 solid 10px;
+  border-radius: 1.563rem; }
+
+.max-container {
+  padding: 30px 0px; }
+
+.card-tarot {
+  color: #A46FA8; }
+
+.tarot_img {
+  width: 400px;
+  height: 400px;
+  margin: 1.75rem; }
+
+.btn-tarot {
+  width: 110px;
+  background-color: #F1DFB6;
+  color: #A46FA8; }
+  .btn-tarot:hover {
+    background-color: #CAAACD;
+    color: #FDF3DD;
+    border-color: #CAAACD; }
+
+.option-container {
+  display: flex;
+  padding-bottom: 60px; }
+
+.tarot-option {
+  background-color: #FDF3DD;
+  border: #F1DFB6 solid 10px;
+  border-radius: 1.563rem; }
+
+.option-img {
+  height: 300px;
+  margin-top: 15px;
+  border-radius: 15px;
+  margin-bottom: -30px; }
+
+.nav-mnsj {
+  color: #91A1AF; }
+
+.card-mnsj {
+  color: #91A1AF; }
+
+.btn-taller {
+  background-color: #F1DFB6;
+  border-color: #F1DFB6;
+  color: #A46FA8;
+  width: 39.063rem; }
+  .btn-taller:hover {
+    background-color: #CAAACD;
+    color: #FDF3DD;
+    border-color: #CAAACD; }
+
+.redes {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px; }
+
+.card-contacto {
+  display: flex;
+  margin-top: 15px; }
+
+.text-cont {
+  font-size: 40px; }
