--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -78,9 +78,10 @@
         width: 28.125rem;
         height: 18.75rem;
     }
-
 }
 
-
-
+.card-hover:hover{
+    transform: scale(0.95,0.95);
+    transition: all 0.3s ease-in;
+}
 
