--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,6 +1,6 @@
 .redes{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin-right: 10px;
 }
 
@@ -10,5 +10,6 @@
 }
 
 .text-cont{
-    font-size: 40px;
+    font-size: 30px;
+    color: $rojo;
 }
