--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -29,6 +29,13 @@
         margin-top: 2.5rem;
         margin-bottom: -2.5rem;
     }
+    &_imgseis{
+        width: 160px;
+        height: 230px;
+        align-self: center;
+        margin-top: 10px;
+        margin-bottom: -2.5rem;
+    }
     &_one{
         background-color: $celeste;
         border-color: $celeste;
