--- a/scss/_mnsjytall.scss
+++ b/scss/_mnsjytall.scss
@@ -11,6 +11,7 @@
     border-color: $rosa;
     color: $violeta;
     width: 39.063rem;
+    margin-top: 50px;
     &:hover{
         background-color: $lila;
         color: $color-fondo;
@@ -26,8 +27,8 @@ margin-top: 70px;
     background-color: $rosa;
     border-color: $rosa;
     color: $azul;
-    width: 39.063rem;
-    margin-top: 150px;
+    width: 500px;
+    margin-top: 50px;
     &:hover{
         background-color: $azul;
         color: $color-fondo;
