--- a/scss/_tarot.scss
+++ b/scss/_tarot.scss
@@ -25,9 +25,9 @@
 }
 
 .btn-tarot{
-    width: 110px;
+    width: 700px;
     background-color: $rosa;
-    //margin-top: 33px;
+    margin-top: 33px;
     color: $violeta;
     &:hover{
         background-color: $lila;
